--- a/app/src/main/res/layout/dialog_booking_details.xml
+++ b/app/src/main/res/layout/dialog_booking_details.xml
@@ -27,4 +27,18 @@
         android:textColor="#000000"
         android:textSize="16sp"/>
 
+    <TextView
+        android:id="@+id/userNameText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:id="@+id/userEmailText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="16sp"/>
+
 </LinearLayout>
